fixtures/frontend/milestone-2/invalid/custom-source-provider-argument-type-mismatch/main.aivi
provider custom.feed
    argument path: Text
    wakeup: providerTrigger

@source custom.feed 1
signal updates : Signal Int
